# junk-car-rag

./: .gitignore  README.md  dev.md  lemons_rules.json  model_manager.py  parsed_rules.json  pyproject.toml  rag_system.py  rule_chunker.py  rule_chunks.json  scraper.py  web_rule_parser.py
documentation/: architecture.md  dev.md
extractors/: rule_scraper.py
